--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/NotifyExpiringSoon.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/NotifyExpiringSoon.email.twig
@@ -11,7 +11,7 @@
     <br>
     The GRIIDC Team<br>
     <br>
-    *You are receiving this email because you are identified as a user of the Gulf of Mexico Research Initiative Research System. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
+    *You are receiving this email because you are identified as a user of the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) system. If you believe you should not be receiving this email please notify <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>.*
 {% endblock %}
 
 {% block body_text %}
@@ -25,5 +25,5 @@ Thank you,
 
 The GRIIDC Team
 
-*You are receiving this email because you are identified as a user of the Gulf of Mexico Research Initiative Research System. If you believe you should not be receiving this email please notify griidc@gomri.org.*
+*You are receiving this email because you are identified as a user of the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) system. If you believe you should not be receiving this email please notify griidc@gomri.org.*
 {% endblock %}
