--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/form.html.twig
@@ -13,7 +13,7 @@
                         disabled
                         type="button"
                         onclick="window.location.href='{{ path('pelagos_app_ui_datasetreview_default') }}?udiReview=' +
-                                document.getElementById('udiReview').value.trim() + '&mode=reivew';">Review Dataset
+                                document.getElementById('udiReview').value.trim() + '&mode=review';">Review Dataset
                 </button>
             {% endif %}
             <button class="reviewButtons"
