Renamed filename to log

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -72,7 +72,7 @@
                         <th><div class="title">Jira Link</div></th>
                         <th><div class="title">Action</div></th>
                         <th><div class="title">Timestamp</div></th>
-                        <th><div class="title">Filename</div></th>
+                        <th><div class="title">Log</div></th>
                     </tr>
                 </thead>
                 <tfoot>
@@ -81,7 +81,7 @@
                         <th><div class="title">Jira Link</div></th>
                         <th><div class="title">Action</div></th>
                         <th><div class="title">Timestamp</div></th>
-                        <th><div class="title">Filename</div></th>
+                        <th><div class="title">Log</div></th>
                     </tr>
                 </tfoot>
                 <tbody>
