Add DistPoint at DIF time in Submission entity

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
@@ -5,6 +5,7 @@
 {{ form_end(xmlForm, {'render_rest': false}) }}
 
 {{ form_start(form, {'attr': {'id': 'regForm'}}) }}
+{% set distPoint = form.distributionPoints | first %}
     <div id="metatoolbar" class="ui-widget-header ui-corner-all toolbarbutton">
         <button type="button" id="btn-upload" title="This button will allow you to populate tabs with information from a Valid ISO 19115-2 file in xml format from your computer.">Import ISO Metadata XML File</button>
         <button type="button" id="btn-save" title="This button saves the information you have entered into the form but does not submit the information to GRIIDC.">Save and Continue later</button>
@@ -60,6 +61,10 @@
 
             <div id="ds-distribution" class="ds-metadata">
                 {% include 'PelagosAppBundle:DatasetSubmission:distribution-info.html.twig' %}
+            </div>
+
+            <div id="ds-metadata-contact">
+                {% include 'PelagosAppBundle:DatasetSubmission:distribution-contact.html.twig' %}
             </div>
             
             <div id="ds-metadata-contact">
