use twig to escape special chars

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/CI_ResponsibleParty.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/CI_ResponsibleParty.xml.twig
@@ -24,7 +24,7 @@
                 <gmd:CI_Address>
                         <gmd:deliveryPoint>
                             <gco:CharacterString>
-                                <![CDATA[{{Person.deliveryPoint|trim}}]]>
+                                <![CDATA[{{Person.deliveryPoint | trim | raw}}]]>
                             </gco:CharacterString>
                         </gmd:deliveryPoint>
                         <gmd:city>
