--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_DataIdentification.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_DataIdentification.xml.twig
@@ -27,10 +27,10 @@
         </gmd:CI_Citation>
     </gmd:citation>
     <gmd:abstract>
-        <gco:CharacterString><![CDATA[{{dataset.datasetSubmission.abstract | trim}}]]></gco:CharacterString>
+        <gco:CharacterString><![CDATA[{{dataset.datasetSubmission.abstract | trim | raw}}]]></gco:CharacterString>
     </gmd:abstract>
     <gmd:purpose>
-        <gco:CharacterString><![CDATA[{{dataset.datasetSubmission.purpose}}]]></gco:CharacterString>
+        <gco:CharacterString><![CDATA[{{dataset.datasetSubmission.purpose | raw}}]]></gco:CharacterString>
     </gmd:purpose>
     <gmd:status>
         <gmd:MD_ProgressCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_ProgressCode" codeListValue="completed" codeSpace="001">completed</gmd:MD_ProgressCode>
@@ -84,7 +84,7 @@
         {% endif %}
             {% if dataset.datasetSubmission.spatialExtentDescription %}
             <gmd:description>
-                <gco:CharacterString>{{dataset.datasetSubmission.spatialExtentDescription}}</gco:CharacterString>
+                <gco:CharacterString><![CDATA[{{dataset.datasetSubmission.spatialExtentDescription | raw}}]]></gco:CharacterString>
             </gmd:description>
             {% endif %}
             {% if dataset.datasetSubmission.spatialExtent %}
@@ -143,6 +143,6 @@
     </gmd:extent>
     {% endif %}
     <gmd:supplementalInformation>
-        <gco:CharacterString><![CDATA[{{dataset.datasetSubmission.suppParams}}|{{dataset.datasetSubmission.suppMethods}}|{{dataset.datasetSubmission.suppInstruments}}|{{dataset.datasetSubmission.suppSampScalesRates}}|{{dataset.datasetSubmission.suppErrorAnalysis}}|{{dataset.datasetSubmission.suppProvenance}}]]></gco:CharacterString>
+        <gco:CharacterString><![CDATA[{{dataset.datasetSubmission.suppParams | raw}}|{{dataset.datasetSubmission.suppMethods | raw}}|{{dataset.datasetSubmission.suppInstruments | raw}}|{{dataset.datasetSubmission.suppSampScalesRates | raw}}|{{dataset.datasetSubmission.suppErrorAnalysis | raw}}|{{dataset.datasetSubmission.suppProvenance | raw}}]]></gco:CharacterString>
     </gmd:supplementalInformation>
 </gmd:MD_DataIdentification>
