--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -106,14 +106,14 @@
                                 </div>
                             </td>
                             <td valign="top"><form name="AcceptedState" action="{{ path('pelagos_app_ui_mdapp_changemetadatastatus', {'id': dta.id}) }}" method="post">
-                            <select name="to" id="state_sel_{{dta.udi}}">
+                            <!--<select name="to" id="state_sel_{{dta.udi}}"> -->
                                    {% if sname == 'backtosubmitter' %}
-                                      <button name="to" value="In Review BTN" id="state_sel_sub_{{dta.udi}}">change to InReview</button>
+                                      <!--<button name="to" value="In Review BTN" id="state_sel_sub_{{dta.udi}}">change to InReview</button> -->
+                                       <input type="submit" value="change to InReview" id="state_sel_sub_{{dta.udi}}">
                                     {% else %}
                                             <p>no action available</p>
                                     {% endif %}
-                            </select>
-                            <input type="submit" value="->" id="state_sel_sub_{{dta.udi}}">
+                            <!-- </select>  -->
                             </form>
                             </td>
                             <td valign="top">{{ dta.datasetSubmission.submissionTimeStamp is defined and dta.datasetSubmission.submissionTimeStamp is not null ? dta.datasetSubmission.submissionTimeStamp | date("c") }}</td>
