--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -53,10 +53,10 @@
 <div style="background: #fff2e8; padding:0px;" id="tabs">
   <div class="ui-tabs">
     <ul class="ui-tabs-nav">
-        <li style="text-align:center"><a href="#submitted" onClick="clearStatusMessages()">Submitted -tab ({{ m_dataset.submitted|length }})</a></li>
-        <li style="text-align:center"><a href="#inreview" onClick="clearStatusMessages()">In Review -tab ({{ m_dataset.inreview|length }})</a></li>
-        <li style="text-align:center"><a href="#accepted" onClick="clearStatusMessages()" >Accepted -tab ({{ m_dataset.accepted|length }})</a></li>
-        <li style="text-align:center"><a href="#backtosubmitter" onClick="clearStatusMessages()" >Request Revisions -tab ({{ m_dataset.backtosubmitter|length }})</a></li>
+        <li style="text-align:center"><a href="#submitted" onClick="clearStatusMessages()">Submitted ({{ m_dataset.submitted|length }})</a></li>
+        <li style="text-align:center"><a href="#inreview" onClick="clearStatusMessages()">In Review ({{ m_dataset.inreview|length }})</a></li>
+        <li style="text-align:center"><a href="#accepted" onClick="clearStatusMessages()" >Accepted ({{ m_dataset.accepted|length }})</a></li>
+        <li style="text-align:center"><a href="#backtosubmitter" onClick="clearStatusMessages()" >Request Revisions ({{ m_dataset.backtosubmitter|length }})</a></li>
     </ul>
   </div>
 
@@ -105,13 +105,14 @@
                                     </table>
                                 </div>
                             </td>
-                            <td valign="top"><form name="AcceptedState" action="{{ path('pelagos_app_ui_mdapp_changemetadatastatus', {'id': dta.id}) }}" method="post">
+                            <td valign="top">
+                                <form name="AcceptedState" action="{{ path('pelagos_app_ui_mdapp_changemetadatastatus', {'id': dta.id}) }}" method="post">
                             <!--<select name="to" id="state_sel_{{dta.udi}}"> -->
                                    {% if sname == 'backtosubmitter' %}
-                                      <!--<button name="to" value="In Review BTN" id="state_sel_sub_{{dta.udi}}">change to InReview</button> -->
-                                       <input type="submit" value="change to InReview" id="state_sel_sub_{{dta.udi}}">
+                                       <button name="to" value="InReview" id="state_sel_sub_{{dta.udi}}">change to InReview</button>
+                                       <!-- <input type="submit" value="change to InReview" id="state_sel_sub_{{dta.udi}}"> -->
                                     {% else %}
-                                            <p>no action available</p>
+                                        <p>no action available</p>
                                     {% endif %}
                             <!-- </select>  -->
                             </form>
